# sget

./: Cargo.toml  README.md
.github/workflows/: build-package.yml
apt/: Packages  Release
apt/pool/main/: sget_0.1.0_amd64.deb
debian/: changelog  control  copyright  rules
sget_0.1.0_amd64/DEBIAN/: control
src/: main.rs
